# sirius-compiler

./: .gitignore  CMakeLists.txt
include/: compiler.h
src/: compiler.cpp  main.cpp
